; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/See/extr_functions.c_exec_fcn_mapper.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/See/extr_functions.c_exec_fcn_mapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@count_packets = common dso_local global i32 0, align 4
@tcp_session = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @exec_fcn_mapper(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 129, label %5
    i32 128, label %9
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @count_packets, align 4
  %7 = sext i32 %6 to i64
  %8 = inttoptr i64 %7 to i32*
  store i32* %8, i32** %2, align 8
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* @tcp_session, align 4
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %2, align 8
  br label %14

13:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %14

14:                                               ; preds = %13, %9, %5
  %15 = load i32*, i32** %2, align 8
  ret i32* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
